--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis illo laboriosam asperiores dolorem quod error, corporis cumque deserunt quam explicabo!</p>
+    <p>Hello</p>
 </body>
 </html>
