--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning Git - GitHub</title>
+    <style src="text/css"></style>
 </head>
 <body>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis illo laboriosam asperiores dolorem quod error, corporis cumque deserunt quam explicabo!</p>
